# JuiceAgent

./: .gitignore  AgentConfig.toml  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  Todo.md  Version.txt  config.toml  version.txt
cmake/: BuildVersion.cmake  JuiceModule.cmake
docs/: Inject.md
examples/: config_empty.toml
examples/loop/: MANIFEST.MF  build.bat  loop.java  run.bat
includes/JuiceAgent/: Config.hpp  InjectParameters.h  JuiceAgent-API-1.4.1+build.1.hpp  JuiceAgent.h  JuiceAgent.hpp  Logger.hpp  Utils.hpp
includes/JuiceLoader/: InjectParameters.h  InjectorNative.h  JuiceLoaderNative.h
includes/ReflectiveDLLInjection/: CMakeLists.txt  GetProcAddressR.c  LoadLibraryR.c  ReflectiveLoader.c  ReflectiveLoader.h
includes/log.c/: CMakeLists.txt  log.c  log.h
includes/tomlc17/: .gitignore  CMakeLists.txt  Makefile  tomlc17.c  tomlc17.h  tomlcpp.hpp
java/: InjectorNative.java  JuiceLoader.java  cn_xiaozhou233_juiceagent_injector_InjectorNative.h  cn_xiaozhou233_juiceloader_JuiceLoader.h  loop.java
src/: libagent.c  libinjector.c  libjuiceloader.c
src/agent/: CMakeLists.txt  NativeFunctions.cpp  juiceloader.c  juiceloader.cpp  libagent.c  libagent.cpp
src/agent/include/: datautils.h  javautils.h  juiceloader.h  libagent.h
src/agent/jni/: jni_init.cpp
src/agent/utils/: datautils.c  javautils.c  jvmutils.c
src/core/: CMakeLists.txt
src/executable/: CMakeLists.txt  injector.c  injector.cpp
src/injector/: CMakeLists.txt  libinjector.c  libinjector.c.txt  libinjector.cpp
src/injector/include/: InjectorNative.h  InjectorUtils.h
src/injector/utils/: DebugUtils.cpp
src/juiceloader/: CMakeLists.txt  NativeFunctions.cpp  juiceloader.cpp  libjuiceloader.c
src/juiceloader/include/: JuiceLoader.h  JuiceLoaderNative.h  JuiceLoaderUtils.h  juiceloader.h
src/juiceloader/utils/: JuiceLoaderUtils.c
src/libagent/: CMakeLists.txt  DllMain.cpp  JuiceAgent.cpp  ReflectiveLoader.c  libagent.cpp
src/libagent/callback/: ClassFileLoadHook.cpp  MethodEntry.cpp  MethodExit.cpp
src/libagent/core/: bytecodes_opt.cpp  global.cpp  init.cpp
src/libagent/entry/: agent_onload.cpp  jni.cpp
src/libagent/includes/: bytecodes_opt.hpp  cn_xiaozhou233_juiceagent_api_JuiceAgent.h  cn_xiaozhou233_juiceloader_JuiceLoader.h  cn_xiaozhou233_juiceremapper_JuiceRemapper.h  event_type.hpp  eventbus.hpp  global.hpp  jni_impl.h  jni_impl.hpp  juiceloader.h  libagent.h  libagent.hpp  services.hpp  utils.hpp
src/libagent/includes/event/: event_type.hpp  eventbus.hpp
src/libagent/includes/modules/: IModule.hpp  ModuleBase.hpp  ModuleManager.hpp  ModuleRegistry.hpp  Modules.hpp
src/libagent/jni/: bytecode.cpp  classloader.cpp  instrumentation.cpp  loader_define.cpp  loader_inject.cpp  loader_thread.cpp  remapper.cpp
src/libagent/modules/: Dumper.cpp  Example.cpp  JarLoader.cpp  ModuleManager.cpp  Remapper.cpp  Template.cpp
src/libagent/services/: BytecodeService.cpp  JarLoaderService.cpp  ServicesManager.cpp
src/libinjector/: CMakeLists.txt  injector.c  libinject.c
src/libjuiceloader/: CMakeLists.txt  NativeFunctions.cpp  libjuiceloader.cpp
src/libjuiceloader/includes/: cn_xiaozhou233_juiceloader_JuiceLoader.h  jni_impl.h  juiceloader.h
src/libjuiceloader/jni/: loader_ClassFileLoadHook.cpp  loader_class.cpp  loader_init.cpp  loader_inject.cpp  loader_redefine.cpp  loader_retransform.cpp
src/libloader/: CMakeLists.txt
src/libloader/common/: Loader.cpp  api.cpp  config.cpp  libagent.cpp  libloader.cpp
src/libloader/includes/: JvmManager.hpp  Loader.hpp  config.hpp  config.hpp.bak  libloader.hpp
src/libloader/windows/: DllMain.cpp
src/loader/: CMakeLists.txt
src/loader/jni/: jni_init.cpp
src/utils/: CMakeLists.txt  GlobalUtils.h  JVMUtils.c  test.c
tools/: .gitignore  file2bytes.cpp
